tests/outref/TCS14_errors.ref

-- TCS14 : OCTO544 : Assertion failure and Errors when IN is used in SELECT column list

-- This file contains queries that run fine in Octo but error out or produce different output in Postgres
-- due to false/true being 'f'/'t' in Postgres vs 0/1 in Octo. Hence they cannot be in TCS14.sql (which goes
-- through the crosscheck function and expects Octo and Postgres output to be identical).

-- Below queries used to assert fail due to no column alias defined for a CASE statement column in SELECT column list
SELECT CASE 1 in (1) when 't' then 2 end;
SELECT CASE 1 in (1) when 1 then 2 end;
SELECT CASE 1 in (1) when 3 then 2 end;
[ERROR]: ERR_CASE_VALUE_TYPE_MISMATCH: WHEN argument is of type VARCHAR but is used in a context that expects a BOOLEAN type
LINE 4:1: SELECT CASE 1 in (1) when 't' then 2 end;
                                      ^
[ERROR]: ERR_CASE_VALUE_TYPE_MISMATCH: WHEN argument is of type INTEGER but is used in a context that expects a BOOLEAN type
LINE 5:1: SELECT CASE 1 in (1) when 1 then 2 end;
                                    ^
[ERROR]: ERR_CASE_VALUE_TYPE_MISMATCH: WHEN argument is of type INTEGER but is used in a context that expects a BOOLEAN type
LINE 6:1: SELECT CASE 1 in (1) when 3 then 2 end;
                                    ^
